# dukes

./: dukeofvim  dukes.c
hdukes/: README.md  hdukes.cabal  stack.yaml  todolist
hdukes/csrc/: termops.c  termops.h
hdukes/sprites/: bighouseinside  chimo  clearing  clearingwithchimo  dukeofvim  feetinlake  forrest  forrest_2  forrestwithhole  intro  inventory  jerry  lake  royal  tinyhutinside  tinyhutinside_old  townsquare  treasureclearing  vendor  zach
hdukes/src/: Duke.hs  DukeScenes.hs  Items.hs  Main.hs  Termios.hs
hdukes/src/Scenes/: InitialTown.hs  OtherSideOfHole.hs
sprites/: knight
